--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -138,7 +138,7 @@ input[type="file"] + span {
 
   button,
   input[type="submit"] {
-    width: 100%;
+    width: fit-content;
     padding: 0.75rem;
     font-size: 1rem;
   }
